[tool.poetry]
name = "real-world-python-book-projects"
version = "0.1.0"
description = "Projects implemented from the book \"Real World Python\""
authors = ["Amol Gawai <5114143+amolgawai@users.noreply.github.com>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
coverage = {extras = ["toml"], version = "^6.3.2"}
pytest = "^7.1.2"
pytest-sugar = "^0.9.4"
pytest-watch = "^4.2.0"
pytest-picked = "^0.4.6"
pytest-testmon = "^1.3.1"
pytest-cov = "^3.0.0"
hypothesis = "^6.46.1"

[tool.pytest.ini_options]
# empty section so that pytest can determine rootdir
# testpaths = ["tests"]
python_paths = ["."]

[tool.coverage.run]
source = ["."]
omit = ["*__init__*", "*test*"]
[tool.coverage.report]
omit = ["*__init__*", "*test*"]
exclude_lines = ["pragma: no cover",
                "def __repr__",
                "def __str__",
                "if self.debug:",
                "if settings.DEBUG",
                "raise AssertionError",
                "raise NotImplementedError",
                "if 0:",
                "if __name__ == .__main__.:"
                ]

[tool.black]
line-length = 120
# target-version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
# exclude = '''
# (
#     /(
#         \.eggs
#     | \.git
#     | \.hg
#     | \.mypy_cache
#     | \.tox
#     | \.venv
#     | _build
#     | buck-out
#     | build
#     | dist
#     # The following are specific to Black, you probably don\'t want those.
#     | blib2to3
#     | tests/data
#     | profiling
#     )/
# )
# '''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
